edited inside content

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
               <p><em>Freelance</em></p>
               <ul>
                 <li>Developed 3 design projects</li>
-                <li>Recommended and consulted with clients on the most appropriate Web Designs</li>
+                <!-- <li>Recommended and consulted with clients on the most appropriate Web Designs</li> -->
               </ul>
             </div>
           </div>
