--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
               <p></p>
             </div>
             <div class="resume-item">
-              <h4>Pre Degree in Biology Science &amp; mathamatics</h4>
+              <h4>Pre Degree in Biology Science &amp; mathematics</h4>
               <h5>2012 - 2014</h5>
               <p><em>G H S S , Vettilappara</em></p>
               <p></p>
